# discrimination-detection

./: .gitignore  CITATION.cff  README.md  application.py  experiment_handle_app_medium_proxy_CE_competing.pkl  experiment_handle_app_medium_proxy_CE_proxy.pkl  experiment_handle_app_strong_proxy_CE_competing.pkl  experiment_handle_app_strong_proxy_CE_non_proxy.pkl  experiment_handle_app_strong_proxy_CE_proxy_non_proxy.pkl  experiment_handle_app_weak_proxy_CE_competing.pkl  experiment_handle_app_weak_proxy_CE_proxy.pkl  experiment_handle_app_weak_proxy_CE_random.pkl  pyproject.toml  requirements.txt
reporting/: make_report.R  process_results.py  processing.py  utils.R  utils.py
scripts/: dev_analysis.py  dev_experiment.py  dev_lp_test.py  dev_robots.py  dev_sensitivity.py
src/: ce_quiz.py  classifier.py  counterfactual_explanations.py  dag.py  paths.py  questionnaire.py  quiz.py  robot_catalog.py  robots.py  sensitivity.py  set_selection.py  utils.py
static/: experiment_handle.pkl
templates/: 00_welcome.jinja  01_consent.jinja  01_interim.jinja  02_instructions_0.jinja  02_instructions_1.jinja  02_instructions_2.jinja  02_instructions_3.jinja  02_instructions_4.jinja  02_instructions_5.jinja  02_instructions_6.jinja  02_instructions_7.jinja  02_instructions_8.jinja  02_instructions_9.jinja  03_auditing_traing.jinja  04_instructions_final.jinja  05_quiz.jinja  06_anchoring_01.jinja  06_anchoring_02.jinja  06_anchoring_03.jinja  07_probing.jinja  08_instructions_auditing_00.jinja  08_instructions_auditing_01.jinja  09_auditing.jinja  10_questionnaire.jinja  11_debrief.jinja  quiz_failed.jinja  (+1 more)
(+198 files in other folders)
