[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discrimination-detection"
version = "1.0.0"
description = "Code for 'Discrimination Exposed? On the Reliability of Explanations for Discrimination Detection'"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Julian Skirzynski"},
    {name = "David Danks"},
    {name = "Berk Ustun"}
]
keywords = ["discrimination detection", "fairness", "explanations", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dill==0.3.6",
    "Flask==2.2.2",
    "Flask-Cors>=3.0.10",
    "Flask-JWT>=0.3.2",
    "flask-ngrok==0.0.25",
    "Flask-Session>=0.4.0",
    "Flask-WTF==1.0.1",
    "ipython>=8.11.0",
    "Jinja2>=3.1.2",
    "jsonify==0.5",
    "more-itertools>=9.0.0",
    "matplotlib==3.5.2",
    "matplotlib-inline==0.1.3",
    "numpy==1.22.4",
    "pandas==1.4.3",
    "pathlib>=1.0.1",
    "pickleshare==0.7.5",
    "Pillow==9.2.0",
    "pyngrok>=6.0.0",
    "PyYAML==6.0.1",
    "scipy>=1.8.1",
    "shortuuid>=1.0.11",
    "six==1.16.0",
    "Werkzeug==2.2.2",
    "WTForms>=3.0.1",
    "psutil==5.9.8",
]

[project.urls]
Repository = "https://github.com/juliannski/discrimination-detection"

[tool.setuptools]
packages = ["src", "reporting", "scripts"]
